--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "@types/aos": "^3.0.4",
     "@types/react-scroll": "^1.8.3",
     "aos": "^2.3.4",
